<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="activity.AddBillInfoActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="0dp">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:theme="@style/Theme.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleToolbar"
                    style="@style/toolbarCenter"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="4.5"
                    android:gravity="center"
                    android:text="@string/billInfo_title" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="DoneInfoBillInfo"
                    android:text="@string/addBillInfo"
                    android:textColor="#000" />
            </LinearLayout>


        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Mã hóa đơn " />

        <Spinner
            android:id="@+id/spidbill"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="@string/idBill"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"

            android:maxLines="1"
            android:singleLine="true" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Mã sách " />

        <Spinner
            android:id="@+id/spIDBook"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:hint="@string/IDbook"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"

            android:maxLines="1"
            android:singleLine="true" />


    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amountB"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"

            android:maxLines="1"
            android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>


    <Button

        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/mybutton"
        android:onClick="addBillinfo"
        android:text="@string/addType"
        android:textColor="#fff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvThanhtien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:text="Thành tiền: "
        android:textSize="20sp" />

    <ListView
        android:id="@+id/lvBillInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>