<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="activity.AddBillActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="0dp">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:theme="@style/Theme.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleToolbar"
                    style="@style/toolbarCenter"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/bill_title" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="addInfoBill"
                    android:text="@string/addBill"
                    android:textColor="#000" />
            </LinearLayout>


        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="88dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/bill" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/bill_add"
            android:textSize="25sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">

            <EditText
                android:id="@+id/edtIDBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/idBill"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"

                android:maxLines="1"
                android:singleLine="true" />


        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="3">

                <EditText
                    android:id="@+id/edtBillDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/billDate"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="datetime"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <Button

                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/mybutton"
                android:text="@string/choose_date"
                android:textColor="#fff"
                android:onClick="chooseDate"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>